<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Book Cricket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn1player">1 PLAYER</string>
    <string name="btn2players">2 PLAYERS</string>
    <string name="btnplayer1">1 PLAYER</string>
    <string name="btnplayers2">2 PLAYERS</string>
    <string name="btnselectpages">SELECT PAGES</string>
    <string name="btnhowtoplay">HOW TO PLAY?</string>
    <string name="btnsettings">SETTINGS</string>
    <string name="btnexit">EXIT</string>
    <string name="texthow">how to play</string>
    <string name="cbsound">Sound Off</string>
    <string name="cbvibrate">Vibration </string>
    <string name="cpuscore">0</string>
    <string name="cpuwick">0</string>
    <string name="playerscore">0</string>
    <string name="playerwick">0</string>
    <string name="btnflip">FLIP PAGE</string>
    <string name="leftpage">00</string>
    <string name="rightpage">00</string>
    <string name="player1">PLAYER 1</string>
    <string name="p1score">0</string>
    <string name="p1wick">0</string>
    <string name="player2score">0</string>
    <string name="player2wick">0</string>
    <string name="btnoptions">GAME OPTIONS</string>
    <string name="rbonehun">100 pages</string>
    <string name="rbtwohun">200 pages</string>
    <string name="rbfivehun">500 pages</string>
    <string name="rbfivewick">5 wickets</string>
    <string name="rbtenwick">10 wickets</string>
    <string name="setsoundoffon">Set sounds off/on</string>
	<string name="sounds">Sound</string>
	<string name="setpages">Set number of pages</string>
	<string name="pagesettings">Pages</string>
	<string name="setwickets">Set number of wickets</string>
	<string name="wicketsettings">Wickets</string>
	
</resources>
